--- a/tools/wp8.1/IseStudio/App.xaml
+++ b/tools/wp8.1/IseStudio/App.xaml
@@ -1,7 +1,10 @@
-﻿<Application
-    x:Class="IseStudio.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:IseStudio">
-
+﻿<Application 
+    x:Class="IseStudio.App" 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+    xmlns:local="using:IseStudio"
+    xmlns:vm="using:IseStudio">
+    <Application.Resources>
+        <vm:ViewModelLocator x:Key="Locator"/>
+    </Application.Resources>
 </Application>
