--- a/tools/wp8.1/IseStudio/Controls/MultiSelectionCanvas.xaml
+++ b/tools/wp8.1/IseStudio/Controls/MultiSelectionCanvas.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d" 
     d:DesignHeight="300" d:DesignWidth="300"
-    DataContext="{Binding Source={StaticResource Locator}, Path=MultiSelectionCanvas}">
+    DataContext="{Binding Source={StaticResource Locator}, Path=Main}">
     <ItemsControl ItemsSource="{Binding ContainerList}">
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
